force-app/main/default/objects/Integration_Order__c/Integration_Order__c.object-meta.xml
<CustomObject>
    <label>Integration Order</label>
    <nameField>
        <displayFormat>IO-{0000}</displayFormat>
        <label>Integration Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>