force-app/main/default/objects/Integration_Order__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>ERP reference ID (if returned)</inlineHelpText>
    <label>External Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>