force-app/main/default/objects/Integration_Order__c/fields/Last_Error__c.field-meta.xml
<CustomField>
    <fullName>Last_Error__c</fullName>
    <inlineHelpText>Last failure reason</inlineHelpText>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>