force-app/main/default/objects/Integration_Order__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <inlineHelpText>JSON sent to external system</inlineHelpText>
    <label>Payload</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>