force-app/main/default/objects/Integration_Order__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <inlineHelpText>API response stored</inlineHelpText>
    <label>Response</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>