force-app/main/default/objects/Integration_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Retry_Count__c</columns>
    <columns>Response__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>